--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PlayerActivity">
-
-        </activity>
-        <activity android:name="com.suslovalex.view.activity.MainMenuActivity">
+        <activity android:name="com.suslovalex.view.activity.PlayerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.suslovalex.view.activity.MainMenuActivity">
+
+        </activity>
+        <service android:name="com.suslovalex.service.ServicePlayer"
+            android:exported="false"></service>
     </application>
 
 </manifest>
