FAT-6842: Add button and two spinners.
Signed-off-by: AleksandrAlex <suslovalmi@mail.ru>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <service android:name="com.suslovalex.service.ServicePlayer"
             android:exported="false"></service>
+        <activity android:name="com.suslovalex.view.activity.SelectActivity"></activity>
     </application>
 
 </manifest>
