--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         <service android:name="com.suslovalex.service.ServicePlayer"
             android:exported="false"></service>
         <activity android:name="com.suslovalex.view.activity.SelectActivity"></activity>
+        <provider
+            android:authorities="com.suslovalex.model.SongDatabase"
+            android:name=".provider.ProviderDB"/>
     </application>
 
 </manifest>
