--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.suslovalex.view.activity.SelectActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+
         </activity>
         <activity android:name="com.suslovalex.view.activity.MainMenuActivity"/>
-        <activity android:name="com.suslovalex.view.activity.PlayerActivity"/>
+        <activity android:name="com.suslovalex.view.activity.PlayerActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <receiver android:name="com.suslovalex.reciever.SongReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.suslovalex.myBroadcastReceiver"/>
+            </intent-filter>
+
+        </receiver>
 
         <service android:name="com.suslovalex.service.ServicePlayer"
             android:exported="false"></service>
