--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         </activity>
         <activity android:name="com.suslovalex.view.activity.MainMenuActivity"/>
         <activity android:name="com.suslovalex.view.activity.PlayerActivity"
-            android:launchMode="singleTask">
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER"/>
