--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.suslovalex.MainActivity">
+        <activity android:name="com.suslovalex.view.BreakingNewsMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.suslovalex.adapter.DescriptionNewsActivity"/>
+        <activity android:name="com.suslovalex.view.DescriptionNewsActivity"/>
     </application>
 
 </manifest>
