--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
